解决select报错为题 就是vue的版本低了 改成^2.5.2 版本

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
-
-             dist/
-             npm-debug.log
-             selenium-debug.log
-             .idea
-             package-lock.json
-             .eslintrc.js
-             .eslintignore
+node_modules/
+dist/
+npm-debug.log
+selenium-debug.log
+.idea
+package-lock.json
+.eslintrc.js
+.eslintignore
