--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": false,
   "scripts": {
     "dev": "node build/dev-server.js",
+    "server":"node server/index",
     "build:prod": "cross-env NODE_ENV=production node build/build.js",
     "build:sit": "cross-env NODE_ENV=sit node build/build.js",
     "build:sit-preview": "cross-env NODE_ENV=sit npm_config_preview=true  npm_config_report=true node build/build.js",
@@ -15,12 +16,14 @@
   "dependencies": {
     "async-validator": "^1.7.1",
     "axios": "0.16.2",
+    "body-parser": "^1.18.3",
     "deepmerge": "^1.5.0",
     "iview": "^3.0.1",
     "jquery": "3.1.1",
     "js-cookie": "2.1.4",
     "mavon-editor": "^2.2.4",
     "mockjs": "1.0.1-beta3",
+    "mysql": "^2.16.0",
     "normalize.css": "3.0.2",
     "nprogress": "0.2.0",
     "popper.js": "^0.6.4",
@@ -33,8 +36,6 @@
     "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "commander": "^2.11.0",
-    "fs.extra": "^1.3.2",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
@@ -44,6 +45,7 @@
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.24.1",
     "chalk": "1.1.3",
+    "commander": "^2.11.0",
     "connect-history-api-fallback": "1.3.0",
     "copy-webpack-plugin": "4.0.1",
     "cross-env": "5.0.1",
@@ -55,10 +57,11 @@
     "eslint-plugin-html": "3.0.0",
     "eslint-plugin-import": "2.3.0",
     "eventsource-polyfill": "0.9.6",
-    "express": "4.15.3",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "friendly-errors-webpack-plugin": "1.6.1",
+    "fs.extra": "^1.3.2",
     "function-bind": "1.1.0",
     "html-webpack-plugin": "2.28.0",
     "http-proxy-middleware": "0.17.4",
