--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@packy-tang/vue-tinymce": "^0.1.5",
     "async-validator": "^1.7.1",
     "axios": "0.16.2",
     "body-parser": "^1.18.3",
@@ -32,7 +33,6 @@
     "vue-echarts": "^2.4.0",
     "vue-json-tree-view": "^2.0.7",
     "vue-router": "^2.5.3",
-    "vue-tinymce": "github:lpreterite/vue-tinymce",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
