--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "2.1.4",
     "mavon-editor": "^2.2.4",
     "mockjs": "1.0.1-beta3",
+    "multer": "^1.3.1",
     "mysql": "^2.16.0",
     "normalize.css": "3.0.2",
     "nprogress": "0.2.0",
@@ -57,7 +58,7 @@
     "eslint-plugin-html": "3.0.0",
     "eslint-plugin-import": "2.3.0",
     "eventsource-polyfill": "0.9.6",
-    "express": "^4.15.3",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "friendly-errors-webpack-plugin": "1.6.1",
